testsuite/tests/properties/invalid_and_or/eq_bool/test.lkt
from common import FooNode

class Example: FooNode implements TokenNode {
    @ignored fun f(b: Bool, e: Equation): Bool = e and b
}
